--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,12 @@
 </head>
 <body>
 
+    <div id="footer" class="page__footer">
+      <footer>
+        {% include footer/custom.html %}
+        {% include_cached footer.html %}
+      </footer>
+    </div>
 
 
 </body>
