--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,20 @@
   {% include head/custom.html %}
     <meta name="google-site-verification" content="rIqJd2ageMYnI6gwwFI2feUJ5LDQqfgK2AmfAh-YykI" />
 </head>
-<body>
+<body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
+    {% include_cached skip-links.html %}
+    {% include_cached browser-upgrade.html %}
+    {% include_cached masthead.html %}
+
+    <div class="initial-content">
+      {{ content }}
+    </div>
+
+    {% if site.search == true %}
+      <div class="search-content">
+        {% include_cached search/search_form.html %}
+      </div>
+    {% endif
 
     <div id="footer" class="page__footer">
       <footer>
@@ -20,6 +33,7 @@
       </footer>
     </div>
 
+  {% include scripts.html %}
 
 </body>
 </html>
