--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
     <meta name="google-site-verification" content="rIqJd2ageMYnI6gwwFI2feUJ5LDQqfgK2AmfAh-YykI" />
 </head>
 <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
-    {% include_cached skip-links.html %}
+   <!-- {% include_cached skip-links.html %}
     {% include_cached browser-upgrade.html %}
-    {% include_cached masthead.html %}
+    {% include_cached masthead.html %}-->
 
     <div class="initial-content">
       {{ content }}
