html repair all pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="rIqJd2ageMYnI6gwwFI2feUJ5LDQqfgK2AmfAh-YykI" />
 </head>
-<body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
+<body>
 
     {% include_cached skip-links.html %}
     {% include_cached browser-upgrade.html %}
