html repair all pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 <body>
 
     {% include_cached skip-links.html %}
-    {% include_cached browser-upgrade.html %}
+    <!-- {% include_cached browser-upgrade.html %} -->
     {% include_cached masthead.html %}
 
     <div class="initial-content">
