put back header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
 
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
   <head>
+    {% include head.html %}
+    {% include head/custom.html %}
     <meta name="google-site-verification" content="rIqJd2ageMYnI6gwwFI2feUJ5LDQqfgK2AmfAh-YykI" />
   </head>
 
