--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,13 @@
       </div>
     {% endif %}
 
+    <div id="footer" class="page__footer">
+      <footer>
+        {% include footer/custom.html %}
+        {% include_cached footer.html %}
+      </footer>
+    </div>
+
     <!--{% include scripts.html %}-->
 
   </body>
